Update footer information and stakeholders list

--- a/index.html
+++ b/index.html
@@ -652,8 +652,8 @@
         </div>
 
         <footer style="text-align: center; color: white; margin-top: 30px; padding: 20px; opacity: 0.9;">
-            <p style="font-size: 0.9em;">Prepared by: William Forrester, pretty fun</p>
-            <p style="font-size: 0.9em;">Likes Technology</p>
+            <p style="font-size: 0.9em;">Prepared by: W. Forrester and his merry AI orchestration</p>
+            <p style="font-size: 0.9em;">MSDE Division of College and Career Pathways</p>
             <p style="font-size: 0.85em; margin-top: 10px;">Meeting: November 14, 2025 @ 10:00 AM</p>
         </footer>
     </div>
@@ -735,7 +735,7 @@
             });
 
             console.log('📊 Maryland Teacher Awards Reception Planning Dashboard Loaded');
-            console.log('👥 Stakeholders: CASH Campaign, MCEE Towson University');
+            console.log('👥 Stakeholders: CASH Campaign, MSDE, Towson University');
             console.log('📅 Meeting: November 14, 2025 @ 10:00 AM');
         });
     </script>
