--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
             <h1>🏆 Maryland Teacher Awards Reception</h1>
             <div class="subtitle">Planning Dashboard - Scheduling & Venue Analysis</div>
             <div class="subtitle" style="margin-top: 10px; font-size: 0.9em; color: #999;">
-                MSDE Division of College and Career Pathways | Meeting: November 14, 2025 @ 10:00 AM
+                Planning Time | Friday, November 14, 2025 @ 10:00 AM
             </div>
         </header>
 
